# ircbot

./: .gitignore  AUTHORS  GPLHeader.txt  Makefile.am  TODO  configure.ac  ircbot_version.h
include/: account.h  channel.h  command.h  common.h  conf.h  database.h  handlers.h  hash.h  irc.h  ircbot.h  parseirc.h  publiccommands.h  str.h  timer.h  user.h
src/: account.c  channel.c  command.c  conf.c  database.c  handlers.c  hash.c  irc.c  ircbot.c  parseirc.c  publiccommands.c  str.c  timer.c  user.c
