bin_PROGRAMS = \
	ircbot

ircbot_SOURCES = \
	include/account.h \
	include/channel.h \
	include/command.h \
	include/common.h \
	include/conf.h \
	include/database.h \
	include/handlers.h \
	include/hash.h \
	include/ircbot.h \
	include/irc.h \
	include/parseirc.h \
	include/publiccommands.h \
	include/str.h \
	include/timer.h \
	include/user.h \
	src/account.c \
	src/channel.c \
	src/command.c \
	src/conf.c \
	src/database.c \
	src/handlers.c \
	src/hash.c \
	src/ircbot.c \
	src/irc.c \
	src/parseirc.c \
	src/publiccommands.c \
	src/str.c \
	src/timer.c \
	src/user.c

ircbot_CFLAGS = \
	-Iinclude
